@@ -1703,6 +1703,18 @@ class plxShow {
 
 		}
 
+		$mode = $this->plxMotor->mode;
+		
+		# Récupération de la liste des tags de l'article si on est en mode 'article'
+		# pour mettre en évidence les tags dans la sidebar s'ils sont attachés à l'article
+		$artTags = array();
+		if($mode=='article') {
+			$artTagList = $this->plxMotor->plxRecord_arts->f('tags');
+			if(!empty($artTagList)) {
+				$artTags = array_map('trim', explode(',', $artTagList));
+			}
+		}
+		
 		# On affiche la liste
 		$size=0;
 		foreach($array as $tagname => $tag) {
@@ -1713,7 +1725,11 @@ class plxShow {
 			$name = str_replace('#tag_url',$this->plxMotor->urlRewrite('?tag/'.$tag['url']),$name);
 			$name = str_replace('#tag_name',plxUtils::strCheck($tag['name']),$name);
 			$name = str_replace('#nb_art',$tag['count'],$name);
-			$name = str_replace('#tag_status',(($this->plxMotor->mode=='tags' AND $this->plxMotor->cible==$tag['url'])?'active':'noactive'), $name);
+			if($mode=='article' AND in_array($tag['name'],$artTags))
+				$name = str_replace('#tag_status','active', $name);
+			else
+				$name = str_replace('#tag_status',(($mode=='tags' AND $this->plxMotor->cible==$tag['url'])?'active':'noactive'), $name);			
+			
 			echo $name;
 		}
 	}
